<resources>
    <string name="app_name">Structify</string>
    <string name="enter_start_date">Semester Start Date</string>
    <string name="enter_end_date">Semester End Date</string>
    <string name="date_prompt">YYYY-MM-DD</string>
    <string name="num_courses">Number of Courses</string>
    <string name="weekday_hours">Study Hours per Weekday (M-F, how many hours per day can you study?)</string>
    <string name="weekend_hours">Study Hours per Weekend (Sat/Sun, how many hours per day can you study?)</string>
    <string name="main_welcome">Welcome to the App! And congrats for getting a headstart on planning your semester--first, put in your study preferences :)</string>
    <string name="enter_courses">Now, enter course information from your course syllabi.</string>
    <string name="submit_details">Submit Details</string>
    <string name="summary">Overall Summary</string>
    <string name="preview_calendar">Is this correct? Preview Calendar</string>
    <string name="course_by_course">Course-by-Course Breakdown</string>
    <string name="import_GC">Import to Google Calendar</string>
    <string name="do_not_import">Do not Import and Finish</string>
    <string name="importing">Importing to Google Calendar:</string>
    <string name="grand_finish">Exit App</string>
    <string name="import_gallery">Import to Gallery as PNG</string>
</resources>
