<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/enter_start_date"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/startDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/date_prompt"
            android:inputType="date"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="8dp"
            android:text="@string/enter_end_date"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/date_prompt"
            android:inputType="date"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:paddingLeft="8dp"
            android:text="@string/num_courses"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/NumCourses"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/weekday_hours"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/WeekdayTime"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:ems="10"
            android:hint="Type a number"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/weekend_hours"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/WeekendTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Type a number"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/enter_course_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter Course Info!" />

</LinearLayout>